8160425: Vectorization with signalling NaN returns wrong result

Should not use doubles/floats for vector constants in the C code.

Reviewed-by: kvn, vlivanov